bug: authorization header 미전달 오류 해결